# Minux

./: Cargo.toml  bootimage.json  build  build.rs  build.sh  dev.sh  run  run.sh
.cargo/: config.toml
isodir/boot/grub/: grub.cfg
isodir/boot/modules/: bootfs  console_service  elf_loader  gfx_service  init  input_service  ramfs  shell  snake  vesa_driver  vga_driver  x11_demo  x11_server
kernel/: Cargo.toml  linker.ld
kernel/src/: boot.s  main.rs  serial.rs
kernel/src/arch/: mod.rs
kernel/src/ipc/: endpoint.rs  ipc.rs  message.rs  mod.rs  syscall.rs
kernel/src/microkernel/: elf.rs  mod.rs  sched.rs  syscall.rs  task.rs
kernel/src/mm/: heap.rs  mod.rs
userspace/: linker.ld
userspace/assets/fonts/: ter-u16b.psf
userspace/bootfs/: Cargo.toml
userspace/bootfs/src/: main.rs
userspace/cat/: Cargo.toml
userspace/cat/src/: main.rs
userspace/console_service/: Cargo.toml
userspace/console_service/src/: main.rs
userspace/elf_loader/: Cargo.toml
userspace/elf_loader/src/: main.rs
userspace/gfx_service/: Cargo.toml
userspace/gfx_service/src/: main.rs
userspace/init/: Cargo.toml
userspace/init/src/: main.rs
userspace/input_service/: Cargo.toml
userspace/libminux/: Cargo.toml
userspace/ls/: Cargo.toml
userspace/proc_service/: Cargo.toml
userspace/ramfs/: Cargo.toml
userspace/shell/: Cargo.toml
userspace/snake/: Cargo.toml
userspace/tree/: Cargo.toml
userspace/vesa_driver/: Cargo.toml
userspace/vfs/: Cargo.toml
userspace/vga_driver/: Cargo.toml
userspace/x11_demo/: Cargo.toml
userspace/x11_server/: Cargo.toml
(+32 files in other folders)
